<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.KekodChallenge2NewsApp.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:theme="@style/Theme.KekodChallenge2NewsApp.AppWidgetContainer">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/breaking_news"
        android:textColor="@color/color_5"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/small_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:text="@string/series"
            android:textColor="@color/color_3"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/small_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/small_category"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="16sp"
            android:layout_toStartOf="@id/news_image"
            android:maxLines="3"
            android:text="@string/widget_news_title_1"
            android:textColor="@color/color_1"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/news_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_below="@id/small_category"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/small_image"
            android:scaleType="centerCrop"
            android:src="@drawable/widget_image_1" />

        <TextView
            android:id="@+id/small_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/small_title"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp"
            android:text="@string/one_hour_ago"
            android:textColor="@color/color_3" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/small_category2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:text="@string/movie"
            android:textColor="@color/color_3"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/small_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/small_category2"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="16sp"
            android:layout_toStartOf="@id/news_image2"
            android:maxLines="3"
            android:text="@string/widget_news_title_2"
            android:textColor="@color/color_1"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/news_image2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_below="@id/small_category2"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/small_image"
            android:scaleType="centerCrop"
            android:src="@drawable/widget_image_2" />

        <TextView
            android:id="@+id/small_time2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/small_title2"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp"
            android:text="@string/two_hours_ago"
            android:textColor="@color/color_3" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/small_category3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:text="@string/sectoral"
            android:textColor="@color/color_3"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/small_title3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/small_category3"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="16sp"
            android:layout_toStartOf="@id/news_image3"
            android:maxLines="3"
            android:text="@string/widget_news_title_3"
            android:textColor="@color/color_1"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/news_image3"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_below="@id/small_category3"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/small_image"
            android:scaleType="centerCrop"
            android:src="@drawable/widget_image_3" />

        <TextView
            android:id="@+id/small_time3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/small_title3"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp"
            android:text="@string/four_hours_Ago"
            android:textColor="@color/color_3" />
    </RelativeLayout>

</LinearLayout>