<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="com.pandorina.kekodchallenge2newsapp.fragment.NewsDetailFragment" />

        <variable
            name="news"
            type="com.pandorina.kekodchallenge2newsapp.model.News" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/nested_scroll">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <ImageButton
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/left_arrow"
                    android:onClick="@{() -> fragment.onClickBack()}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/back"
                    tools:ignore="MissingConstraints" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/ic_share"
                    android:onClick="@{() -> fragment.onClickShare()}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/share"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/detail_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@{news.category}"
                    android:textAlignment="textStart"
                    android:textColor="@color/color_5"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="BİLİM" />

                <TextView
                    android:id="@+id/detail_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@{news.time}"
                    android:textAlignment="textEnd"
                    android:textColor="@color/color_2"
                    android:textSize="16sp"
                    tools:text="2 saat önce" />
            </LinearLayout>

            <TextView
                android:id="@+id/detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{news.title}"
                android:textAlignment="textStart"
                android:textColor="#212529"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="Görkemli Bir ‘Hidrojen’ Planı Açıklayan Hyundai, Dünyanın İlk Hidrojen Hibrit Spor Otomobilini Tanıttı" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{news.author}"
                android:textColor="@color/color_2"
                android:textSize="16sp"
                tools:text="Çağla Tanrıverdi" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/detail_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/item_news_big_list"
                    android:contentDescription="@string/main_image"
                    app:loadImage="@{news.mainImage}" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{news.summary}"
                android:textColor="@color/color_2"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Hyundai, tamamen elektrikli hale gelmeye hazırlanan otomotiv sektörüne yeni bir bakış açısı geliştirdi. Bu bağlamda, hibrit motor sistemlerini hidrojenli hale getiren şirket, Vision FK isimli bir spor otomobili tanıttı. Şirket ayrıca, 2028 yılına kadar piyasaya süreceği tüm ticari araçlarda hidrojen seçeneği sunmaya hazırlanıyor." />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{news.article1}"
                android:textColor="@color/color_3"
                android:textSize="19sp"
                tools:text="Hyundai, tamamen elektrikli hale gelmeye hazırlanan otomotiv sektörüne yeni bir bakış açısı geliştirdi. Bu bağlamda, hibrit motor sistemlerini hidrojenli hale getiren şirket, Vision FK isimli bir spor otomobili tanıttı. Şirket ayrıca, 2028 yılına kadar piyasaya süreceği tüm ticari araçlarda hidrojen seçeneği sunmaya hazırlanıyor." />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/item_news_big_list"
                    app:loadImage="@{news.subImage1}"
                    android:contentDescription="@string/sub_image"
                    app:checkVisibility="@{news.subImage1}" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{news.article2}"
                android:textColor="@color/color_3"
                android:textSize="19sp"
                tools:text="Hyundai, tamamen elektrikli hale gelmeye hazırlanan otomotiv sektörüne yeni bir bakış açısı geliştirdi. Bu bağlamda, hibrit motor sistemlerini hidrojenli hale getiren şirket, Vision FK isimli bir spor otomobili tanıttı. Şirket ayrıca, 2028 yılına kadar piyasaya süreceği tüm ticari araçlarda hidrojen seçeneği sunmaya hazırlanıyor." />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/item_news_big_list"
                    app:loadImage="@{news.subImage2}"
                    android:contentDescription="@string/sub_image_2"
                    app:checkVisibility="@{news.subImage2}" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{news.article3}"
                android:textColor="@color/color_3"
                android:textSize="19sp"
                tools:text="Hyundai, tamamen elektrikli hale gelmeye hazırlanan otomotiv sektörüne yeni bir bakış açısı geliştirdi. Bu bağlamda, hibrit motor sistemlerini hidrojenli hale getiren şirket, Vision FK isimli bir spor otomobili tanıttı. Şirket ayrıca, 2028 yılına kadar piyasaya süreceği tüm ticari araçlarda hidrojen seçeneği sunmaya hazırlanıyor." />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</layout>